--- a/shoppee/assets/css/main.css
+++ b/shoppee/assets/css/main.css
@@ -1,6 +1,7 @@
 .main{
+    overflow: hidden;
+}    
 
-}
 .header{
     position: fixed;
     background-image: linear-gradient(0, #fe6433, #f53e2d);
@@ -68,13 +69,58 @@
 }
 .header__subnav-list{
     display: flex;
+    justify-content: center;
     align-items: center;
     list-style-type: none;
     height: 100%;
     margin: auto;
-    margin-left: 33.2rem;
+    /* margin-left: 33.2rem; */
 }
 
+.header__sort-bar {
+    position: fixed;
+    top: var(--height-header);
+    left: 0;
+    right: 0;
+    margin: 0;
+    list-style-type: none;
+    background-color: var(--white-color);
+    padding-left: 0;
+    border-bottom: solid 1px #ccc;
+    display: none;
+}
+.header__sort-item {
+    flex: 1;
+    height: var(--height-header-sort-bar);
+
+}
+
+.header__sort-item-link {
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: var(--black-color);
+    display: block;
+    height: 100%;
+    line-height: var(--height-header-sort-bar);
+    text-align: center;
+    position: relative;
+}
+.header__sort-item-active .header__sort-item-link {
+    color: var(--color);
+}
+.header__sort-item-link::before {
+    position: absolute;
+    content: "";
+    top: 50%;
+    left: 0;
+    height: 60%;
+    border-left: solid 2px #d3d3d3;
+    transform: translateY(-50%);
+    
+}
+.header__sort-item:first-child .header__sort-item-link::before {
+    display: none;
+}
 
 .header__subnav-items-link{
     text-decoration: none;
@@ -164,12 +210,77 @@
     height: var(--height-header-search);
     display: flex;
     align-items: center;
-    margin: 0 16rem;
+    margin: 0;
     
 }
+
+.mobile-search-check:checked ~ .header__input {
+    display: flex;
+}
+.header__menu-mobile {
+    padding: 0 5px;
+    display: none;
+}
+.mobile-menu-check:checked ~ .header__search-menu {
+    display: block;
+}
+
+.header__search-menu {
+    background-color: var(--white-color);
+    position: fixed;
+    top: var(--height-header);
+    z-index: 1;
+    left: 0;
+    width: 60%;
+    box-shadow: 0 3px 3px #ccc;
+    animation: mobilemenu linear 0.3s;
+    display: none;
+    
+}
+.header__search-menu-item {
+    height: 42px;
+    border-bottom: solid 0.5px #f5f5f5;
+    
+}
+.header__search-menu-item:hover {
+    background-color: #d3d3d3;
+}
+
+.header__search-menu-item:last-child {
+    border-bottom: none;    
+}
+
+.header__search-menu-list {
+    padding-left: 0;
+    list-style-type: none;
+    margin: 0;
+}
+.header__search-menu-link {
+    text-decoration: none;
+    color: var(--black-color);
+    font-size: 1.4rem;
+    display: block;
+    padding-left: 32px;
+    line-height: 42px;
+    width: 100%;
+}
+
+
+.header__search-mobile {
+    display: none; 
+}
+.mobile-menu-checkbox-icon,
+.header__search-mobile-icon {
+    font-size: 2.4rem;
+    color: var(--white-color);
+}
+
 .header__logo-link{
     color: transparent;
     text-decoration: none;
+    display: block;
+    line-height: 0;
+    -webkit-tap-highlight-color: transparent;
 }
 .header__logo{
     width: 20rem;
@@ -211,6 +322,7 @@
     right: 0;
     border-radius: 3px;
     display: none;
+    z-index: 5;
 }
 .header__input-search-list{
     padding-left: 0;
@@ -251,6 +363,7 @@
     position: relative;
     display: inline-block;
     padding: 0 5px;
+    -webkit-tap-highlight-color: transparent;
 }
 /* có cart */
 .header__shopping-notice{
@@ -263,12 +376,15 @@
     padding: 2px 6px;
     border: solid 1px var(--color);
     border-radius: 10px;
+    
 }
 .header__shopping-cart-list{
     padding-left: 0;
     margin-bottom: 0;
     margin-top: 0;
     list-style-type: none;
+    max-height: 56vh;
+    overflow-y: auto;
 }
 .header__shopping-cart-heading{
     color: var(--black-color);
@@ -287,6 +403,21 @@
 .header__shopping-cart-items-info{
     width: 100%;
 }
+
+.sup__info1 {
+    flex: 1;
+    line-height: 2rem;
+    max-height: 4rem;
+    overflow: hidden;
+    padding-right: 16px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    padding-left: 8px;
+    text-align: left;
+}
+
+
 .header__shopping-cart-items-info2,
 .header__shopping-cart-items-info1{
     font-size: 1.4rem;
@@ -305,6 +436,7 @@
 .gia-info1{
     color: var(--color);
     text-decoration: none;
+    margin-right: 6px;
 }
 .delete__items{
     text-decoration: none;
@@ -354,6 +486,7 @@
     box-shadow: 0 3px 3px #ccc;
     animation: headernotification ease-in 0.1s;
     display: none;
+    z-index: 5;
 }
 .header__shopping-cart::before{
     content: "";
@@ -428,6 +561,7 @@
     margin-bottom: 0;
     padding-left: 0;
     display: none;
+    z-index: 5;
    
 }
 .header__input-option-items{
@@ -779,11 +913,20 @@
 .category-list{
     padding-left: 0px;
     list-style-type: none;
+    margin-top: 0;
 }
+.category-items:first-child {
+    padding-top: 16px;
+}
+
 .category-items{
     border-bottom: solid 1px rgba(0, 0, 0, 0.02);
 
 }
+.category-items:hover {
+    background-color: #fafafa;
+}
+
 .category-items__link{
     padding: 14px 30px;
     text-decoration: none;
@@ -828,6 +971,7 @@
     border-radius: 3px;
     margin-left: 10.3rem;
     position: relative;
+    z-index: 1;
 }
 .home-fillter__label1-icon{
     margin-left: 13rem;
@@ -912,6 +1056,295 @@
     text-decoration: none;
     color: var(--black-color);
 }
-.footer{
+.mobile-catagory {
+  display: none;  
+}
+.mobile-catagory-list {
+    display: flex;
+    padding-left: 0;
+    list-style-type: none;
+    max-width: 100%;
+    overflow-x: auto;
+    margin: 0;
+    margin-top: 20px;
+}
+.mobile-catagory-list::-webkit-scrollbar {
+    display: none;
+}
+.mobile-catagory__item {
+    flex-shrink: 0;
+    margin-right: 10px;
+    
+}
+.mobile-catagory__item:last-child {
+    margin-right: 0;
+}
 
+.mobile-catagory__item:nth-of-type(3n + 1) .mobile-catagory__link{
+    background-color: wheat;
+}
+.mobile-catagory__item:nth-of-type(3n + 2) .mobile-catagory__link{
+    background-color: yellowgreen;
+}
+.mobile-catagory__item:nth-of-type(3n + 3) .mobile-catagory__link{
+    background-color: turquoise;
+}
+.mobile-catagory__link {
+    text-decoration: none;
+    color: var(--white-color);
+    font-size: 1.4rem;
+    line-height: 2rem;
+    text-align: center;
+    width: 110px;
+    max-height: 4rem;
+    display: block;
+    border-radius: 5px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    padding: 0 4px;
+}
+/* product items */
+
+
+.home-product-items {
+    margin-top: 24px;
+    background-color: var(--white-color);
+    position: relative;
+    box-shadow: 0 3px 6px #ccc;
+    border-radius: 3px;
+    transition: top linear 0.1s;
+    top: 0;
+    position: relative;
+    display: block;
+    text-decoration: none;
+    color: var(--black-color);
+}
+.home-product-items:hover {
+    border: solid 1px var(--color);
+    top: -4px;
+  
+}
+.home-product-items:hover .home-product-items-search {
+    display: block;
+    
+}
+
+
+.home-product-items-sale {
+    position: absolute;
+    font-size: 1.4rem;
+    top: 5px;
+    right: -4px;
+    background-color: var(--color);
+    padding: 2px;
+    color: var(--white-color);
+    font-weight: 500;
+    padding-left: 4px;
+}
+.home-product-items-sale::after {
+    position: absolute;
+    content: "";
+    right: 0;
+    bottom: -6px;
+    border-top: solid 6px #2e0603e1;
+    border-right: solid 3px transparent;
+
+}
+
+.home-product-items-sale::before {
+    position: absolute;
+    content: "";
+    left: -12px;
+    top: 0px;
+    bottom: 0;
+    border-style: solid;
+    border-width: 10px 0px 10px 12px;
+    border-color: var(--color) transparent var(--color) transparent;
+
+}
+
+
+.home-product-items__img {
+    padding-top: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+
+}
+
+
+.home-product-items__infor {
+    padding: 8px;
+    font-size: 1.2rem;
+}
+.home-product-items__name {
+    color: #444;
+    line-height: 1.8rem;
+    height: 3.6rem;
+    overflow: hidden;
+    display: block;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+}
+.home-product-items__price {
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.4rem;
+}
+.home-product-items__price-new {
+    color: var(--color);
+}
+
+.home-product-items__price-old {
+    position: relative;
+}
+.home-product-items__price-old::after {
+    content: "";
+    position: absolute;
+    border: solid 0.5px;
+    top: 44%;
+    right: 0;
+    left: 0;
+    border-color: var(--black-color);
+}
+
+
+.home-product-items-origin,
+.home-product-items-action {
+    display: flex;
+    justify-content: space-between;
+}
+
+.home-product-items-action {
+    margin: 6px 0;
+}
+.home-product-items-action__star--active,
+.home-product-items-action__like--active {
+    color: var(--color);
+}
+
+.home-product-items-search {
+    position: absolute;
+    bottom: -34px;
+    right: 0;
+    left: 0;
+    background-color: var(--color);
+    padding: 8px;
+    text-align: center;
+    border-radius: 3px;
+    display: none;
+    font-size: 1.4rem;
+}
+.home-product-items-search__link {
+    text-decoration: none;
+    color: var(--white-color);
+}
+
+.home-page {
+    text-align: center;
+    margin-top: 48px;
+    margin-bottom: 32px;
+}
+.home-page a {
+    text-decoration: none;
+    font-size: 1.6rem;
+    color: var(--black-color);
+    margin: 0 32px;
+    padding: 4px 8px;
+    border-radius: 3px;
+
+}
+.home-page a:hover {
+    background-color: var(--white-color);
+    opacity: 0.8;
+}
+.home-page__number-active {
+    background-color: var(--color) !important;
+    box-shadow: 0 1px 2px #ccc;
+    color: var(--white-color) !important;
+}
+.footer{
+    border-top: solid 8px #fe6433;
+    background-color: #f5f5f5;
+
+
+}
+.footer-heading {
+    margin-top: 48px;
+    font-size: 1.6rem;
+    font-weight: 700;
+}
+.footer-list {
+    padding-left: 0;
+    list-style-type: none;
+    font-size: 1.4rem;
+    margin-top: 20px;
+}
+
+.footer-items {
+    margin-bottom: 16px;
+}
+
+.footer-items__link {
+    text-decoration: none;
+    color: #888;
+}
+.footer-items__link:hover {
+    color: var(--color);
+}
+
+.footer-items__link i {
+    margin-right: 4px;
+    font-size: 1.6rem;
+}
+.footer-items__link:hover i {
+    color: #888;
+}
+
+.footer-download {
+    display: flex;
+    margin-top: 20px;
+    
+}
+.footer-qr {
+    width: 80px;
+    height: 80px;
+    border: solid 1px #ccc;
+}
+.footer-download__link {
+    text-decoration: none;
+}
+.footer-download-app {
+    margin-left: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.footer-download-app__store {
+    width: 100px;
+    margin-top: 8px;
+}
+.footer-download__chplay {
+    width: 100px;
+    margin-bottom: 8px;
+}
+
+.footer__bottom {
+    background-color: #ccc;
+    padding: 12px 0;
+    text-align: center;
+    margin-top: 48px;
+}
+.footer-address,
+.footer-text {
+    margin: 0;
+    font-size: 1rem;
+    color: #888;
 }
